# Flyrank_week2

./: .gitignore  README.md  pyproject.toml
src/app/: fastapi_app.py
src/app.egg-info/: SOURCES.txt
